almost done with the project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/images/rock_paper.jpeg">
     <link rel="stylesheet" href="/css/style.css">
     <title>Rock Paper Scissors Game</title>
 </head>
+
 <body>
     <header>
         <h1>Rock Paper Scissors</h1>
@@ -19,7 +22,7 @@
             <h2 class="score"><span id="player">0 </span> : <span id="computer">0</span></h2>
             <p>Computer</p>
         </div>
-        
+
         <h2 id="winner">Make Your Move</h2>
         <div id="buttons">
             <button id="rock">Rock</button>
@@ -31,4 +34,5 @@
 
     <script src="/javascript/app.js"></script>
 </body>
+
 </html>
